--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,10 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity
+                android:name=".TabActivity"
+                android:label="@string/title_activity_tab"
+                android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -30,6 +33,12 @@
                 android:enabled="true"
                 android:exported="false">
         </service>
+
+        <receiver
+                android:name=".MyReceiver"
+                android:enabled="false"
+                android:exported="false">
+        </receiver>
     </application>
 
 </manifest>
